# ExrToJxr

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  index.html  readme.md  vcpkg.json
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
